--- a/sh/.shrc
+++ b/sh/.shrc
@@ -4,6 +4,7 @@ stty -ixon
 
 # Custom commands
 alias edit='$EDITOR'
+alias ssh="TERM=xterm-256color ssh"
 alias pigz="pigz -k"
 alias tb="nc termbin.com 9999"
 alias gogh='bash -c "$(wget -qO- https://git.io/vQgMr)"'
