--- a/sh/.shrc
+++ b/sh/.shrc
@@ -34,6 +34,11 @@ function colortest() {
     print map("\e[${bold}38;5;${_}m$block", @range), "\e[0m"
   }
   ' "$@"
+  echo
+  echo -e "\e[1mbold\e[0m";
+  echo -e "\e[3mitalic\e[0m";
+  echo -e "\e[4munderline\e[0m";
+  echo -e "\e[9mstrikethrough\e[0m";
 }
 
 # Add local bin folders to PATH
