--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -2,6 +2,9 @@
 
 #: Fonts {{{
 
+font_family Hack NF
+font_size 16.0
+
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
