--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -245,6 +245,10 @@ font_size 16.0
 
 #: Window layout {{{
 
+remember_window_size  no
+initial_window_width  80c
+initial_window_height 24c
+
 # remember_window_size  yes
 # initial_window_width  640
 # initial_window_height 400
