Add kitty font size shortcuts

--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -602,6 +602,8 @@ initial_window_height 24c
 
 #: Keyboard shortcuts {{{
 
+kitty_mod ctrl+shift
+
 #: For a list of key names, see: GLFW keys
 #: <http://www.glfw.org/docs/latest/group__keys.html>. The name to use
 #: is the part after the GLFW_KEY_ prefix. For a list of modifier
@@ -796,6 +798,10 @@ initial_window_height 24c
 #: }}}
 
 #: Font sizes {{{
+
+map kitty_mod+equal     change_font_size current +2.0
+map kitty_mod+minus     change_font_size current -2.0
+map kitty_mod+0         change_font_size current 0
 
 #: You can change the font size for all top-level kitty OS windows at
 #: a time or only the current one.
