Set kitty theme to gruvbox_dark

--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -381,6 +381,8 @@ initial_window_height 24c
 
 #: Color scheme {{{
 
+include ./kitty-themes/themes/gruvbox_dark.conf
+
 # foreground #dddddd
 # background #000000
 
