--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@
 
 #: Fonts {{{
 
-font_family Hack NF
+font_family SauceCodePro NF
 font_size 16.0
 
 #: kitty has very powerful font management. You can configure
