--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -383,6 +383,9 @@ initial_window_height 24c
 
 include ./kitty-themes/themes/gruvbox_dark.conf
 
+# Fix color0 being invisible due to dark fg on dark bg
+color0  #d6b666
+
 # foreground #dddddd
 # background #000000
 
