--- a/bspwm/.sxhkdrc
+++ b/bspwm/.sxhkdrc
@@ -146,7 +146,10 @@ alt + Print
 
 # Screenshot selection
 Print
-  spectacle -r -n -b -c
+  tmp="$(mktemp)"; \
+  spectacle -r -n -b -o "$tmp"; \
+  xclip -selection clipboard -t image/png -i "$tmp"; \
+  rm "$tmp"
 
 # Screenshot of all monitors
 alt + shift + Print
