--- a/bspwm/.bspwmrc
+++ b/bspwm/.bspwmrc
@@ -27,7 +27,7 @@ bspc config border_width 4
 bspc config window_gap 12
 
 bspc config split_ratio 0.52
-bspc config borderless_monocle false
+bspc config borderless_monocle true
 bspc config gapless_monocle true
 
 # Reduce the lag when resizing
