--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -700,6 +700,8 @@ kitty_mod ctrl+shift
 
 #: Scrolling {{{
 
+map kitty_mod+a show_scrollback
+
 # map kitty_mod+up        scroll_line_up
 # map kitty_mod+k         scroll_line_up
 # map kitty_mod+down      scroll_line_down
