--- a/bspwm/.bspwmrc
+++ b/bspwm/.bspwmrc
@@ -41,3 +41,6 @@ bspc config remove_unplugged_monitors true
 # having to use the meaningless "Wine:explorer.exe" identifier
 # (which could match other programs running in a virtual desktop)
 bspc rule -a Wine:explorer.exe state=floating center=true border=off rectangle=2560x1440+0+0
+
+# Fix Overcooked 2 being aligned on the left side of the screen
+bspc rule -a Overcooked2.x86_64 center=true
