Change left monitor hotkeys to function keys

--- a/bspwm/.bspwmrc
+++ b/bspwm/.bspwmrc
@@ -18,8 +18,8 @@ function enforce_monitor_position() {
   )
 }
 
-bspc monitor DP-4 -d 1 2 3 4
-bspc monitor DP-2 -d 5 6 7 8
+bspc monitor DP-4 -d  0  1  2  3  4  5  6  7  8  9
+bspc monitor DP-2 -d 10 11 12 13 14 15 16 17 18 19
 
 enforce_monitor_position DP-4 '^1'
 
