--- a/bspwm/.bspwmrc
+++ b/bspwm/.bspwmrc
@@ -23,6 +23,10 @@ bspc monitor DP-2 -d 10 11 12 13 14 15 16 17 18 19
 
 enforce_monitor_position DP-4 '^1'
 
+bspc config normal_border_color '#30302f'
+bspc config active_border_color '#9e8e7e'
+bspc config focused_border_color '#906ef5'
+
 bspc config border_width 4
 bspc config window_gap 12
 
