--- a/bspwm/.sxhkdrc
+++ b/bspwm/.sxhkdrc
@@ -49,11 +49,8 @@ hyper + F{1,2,3,4,5,6,7,8,9}
   bspc desktop $flag {10,11,12,13,14,15,16,17,18}
 
 # Move window to desktop
-hyper + shift + {_,alt +} {1,2,3,4}
-  monitor={0,4}; \
-  id="$(bspc query -N -n)"; \
-  monitor=$((monitor + {1,2,3,4})); \
-  bspc node $id -d ^$monitor; bspc node $id -f
+hyper + shift + {_,F}{1,2,3,4,5,6,7,8,9}
+  bspc node focused -d {_,1}{0,1,2,3,4,5,6,7,8} --follow
 
 # TODO: resize window
 #hyper + alt + {Left,Down,Up,Right}
