--- a/bspwm/.bspwmrc
+++ b/bspwm/.bspwmrc
@@ -30,6 +30,7 @@ bspc config focused_border_color '#906ef5'
 bspc config border_width 4
 bspc config window_gap 12
 
+bspc config automatic_scheme alternate
 bspc config split_ratio 0.52
 bspc config borderless_monocle true
 bspc config gapless_monocle true
