--- a/bspwm/.bspwmrc
+++ b/bspwm/.bspwmrc
@@ -51,4 +51,6 @@ bspc rule -a Wine:explorer.exe state=floating center=true border=off rectangle=2
 # Fix Overcooked 2 being aligned on the left side of the screen
 bspc rule -a Overcooked2.x86_64 center=true
 
+bspc rule -a Peek state=floating
+
 bspc wm --adopt_orphans
