Fix rofi appearing on the wrong monitor when selected desktop is empty

--- a/bspwm/.sxhkdrc
+++ b/bspwm/.sxhkdrc
@@ -78,12 +78,12 @@ super + alt + BackSpace
 
 # Run desktop programs and commands
 hyper + {_,shift +} space
-  rofi -monitor -4 -theme ~/.config/rofi/themes/onedark.rasi \
+  rofi -monitor "$(bspc query -M -m --names)" -theme ~/.config/rofi/themes/onedark.rasi \
     {-modi drun -show drun,-modi run -show run}
 
 # Cycle through windows
 alt + Tab
-  rofi -monitor -4 -show-icons -theme ~/.config/rofi/themes/onedark.rasi \
+  rofi -monitor "$(bspc query -M -m --names)" -show-icons -theme ~/.config/rofi/themes/onedark.rasi \
     -modi window,windowcd -show window
 
 # TODO: Cycle through chrome tabs
