--- a/bspwm/.sxhkdrc
+++ b/bspwm/.sxhkdrc
@@ -57,8 +57,9 @@ hyper + d ; {1,2,3,4,5,6,7,8,9}
 hyper + shift + {_,F}{1,2,3,4,5,6,7,8,9}
   bspc node focused -d {_,1}{0,1,2,3,4,5,6,7,8} --follow
 
-# TODO: resize window
-#hyper + alt + {Left,Down,Up,Right}
+# Resize window
+hyper + alt + {Left,Down,Up,Right} : {Left,Down,Up,Right}
+  bspc node -z {left,bottom,top,right} {-10 0,0 -10,0 10,10 0}
 
 # Kill process
 hyper + shift + k
