--- a/sh/.shrc
+++ b/sh/.shrc
@@ -15,8 +15,8 @@ if [[ "$TERM" == "xterm-kitty" ]]; then
   alias icat="kitty +kitten icat"
 fi
 
-# Hack to avoid having to push terminfo when using ssh in urxvt
-if [[ "$TERM" == "rxvt-unicode-256color" ]]; then
+# Hack to avoid having to push terminfo when using ssh in urxvt/kitty
+if [[ "$TERM" == "rxvt-unicode-256color" || "$TERM" == "xterm-kitty" ]]; then
   alias ssh="TERM=xterm-256color ssh"
 fi
 
