--- a/sh/.shrc
+++ b/sh/.shrc
@@ -10,6 +10,7 @@ alias edit='$EDITOR'
 alias pigz="pigz -k"
 alias tb="nc termbin.com 9999"
 alias gogh='bash -c "$(wget -qO- https://git.io/vQgMr)"'
+alias screenkey='screenkey --no-systray --no-detach'
 
 if [[ "$TERM" == "xterm-kitty" ]]; then
   alias icat="kitty +kitten icat"
