--- a/bspwm/.sxhkdrc
+++ b/bspwm/.sxhkdrc
@@ -90,6 +90,7 @@ hyper + {_,shift +} space
 # Cycle through windows
 alt + Tab
   rofi -monitor "$(bspc query -M -m --names)" -show-icons -theme ~/.config/rofi/themes/onedark.rasi \
+    -kb-row-tab 'Alt+Tab,Tab' \
     -modi window,windowcd -show windowcd
 
 # TODO: Cycle through chrome tabs
