Increase kitty scrollback buffer

--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -89,6 +89,8 @@ font_size 16.0
 
 #: Scrollback {{{
 
+scrollback_lines 1000000
+
 # scrollback_lines 2000
 
 #: Number of lines of history to keep in memory for scrolling back.
