--- a/bspwm/.sxhkdrc
+++ b/bspwm/.sxhkdrc
@@ -49,7 +49,7 @@ hyper + F{1,2,3,4,5,6,7,8,9}
   bspc desktop $flag {10,11,12,13,14,15,16,17,18}
 
 # Switch desktop on current monitor
-hyper + d ; {1,2,3,4,5,6,7,8,9}
+hyper + d : {1,2,3,4,5,6,7,8,9}
   cur="$(bspc query --names -D -d)"; \
   bspc desktop -f $(( (cur >= 10 ? 10 : 0) + {0,1,2,3,4,5,6,7,8} ))
 
