Remap 'kill process' hotkey to hyper+shift+q

--- a/bspwm/.sxhkdrc
+++ b/bspwm/.sxhkdrc
@@ -61,13 +61,10 @@ hyper + shift + {_,F}{1,2,3,4,5,6,7,8,9}
 hyper + alt + {Left,Down,Up,Right} : {Left,Down,Up,Right}
   bspc node -z {left,bottom,top,right} {-10 0,0 10,0 -10,10 0}
 
-# Kill process
-hyper + shift + k
-  bspc node -k
-
 # Close window
-hyper + q
-  bspc node -c
+# TODO: add zenity confirmation
+hyper + {_,shift +} q
+  bspc node -{c,k}
 
 # Lock session and pause all VLC players
 super + shift + l
