--- a/bspwm/.bspwmrc
+++ b/bspwm/.bspwmrc
@@ -31,6 +31,7 @@ bspc config focused_border_color '#906ef5'
 bspc config border_width 4
 bspc config window_gap $BSPWM_GAP
 
+bspc config ignore_ewmh_fullscreen all
 bspc config automatic_scheme alternate
 bspc config split_ratio 0.52
 bspc config borderless_monocle true
