--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -251,6 +251,9 @@ remember_window_size  no
 initial_window_width  80c
 initial_window_height 24c
 
+window_resize_step_cells 1
+window_resize_step_lines 1
+
 # remember_window_size  yes
 # initial_window_width  640
 # initial_window_height 400
