--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -728,6 +728,8 @@ map kitty_mod+a show_scrollback
 
 #: Window management {{{
 
+map kitty_mod+enter new_window_with_cwd
+
 # map kitty_mod+enter new_window
 
 #: You can open a new window running an arbitrary program, for
@@ -768,6 +770,8 @@ map kitty_mod+a show_scrollback
 #: }}}
 
 #: Tab management {{{
+
+map kitty_mod+t new_tab_with_cwd
 
 # map kitty_mod+right next_tab
 # map kitty_mod+left  previous_tab
