Add xcopy and xpaste shell aliases

--- a/sh/.shrc
+++ b/sh/.shrc
@@ -7,10 +7,12 @@
 
 # Custom commands
 alias edit='$EDITOR'
-alias pigz="pigz -k"
-alias tb="nc termbin.com 9999"
+alias pigz='pigz -k'
+alias tb='nc termbin.com 9999'
 alias gogh='bash -c "$(wget -qO- https://git.io/vQgMr)"'
 alias screenkey='screenkey --no-systray --no-detach'
+alias xcopy='xclip -selection clipboard -in'
+alias xpaste='xclip -selection clipboard -out'
 
 if [[ "$TERM" == "xterm-kitty" ]]; then
   alias icat="kitty +kitten icat"
