--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -729,6 +729,10 @@ map kitty_mod+a show_scrollback
 #: Window management {{{
 
 map kitty_mod+enter new_window_with_cwd
+map kitty_mod+left  neighboring_window left
+map kitty_mod+right neighboring_window right
+map kitty_mod+up    neighboring_window up
+map kitty_mod+down  neighboring_window down
 
 # map kitty_mod+enter new_window
 
