Remap kitty tab navigation hotkeys to ctrl+{_,shift+}tab

--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -775,7 +775,9 @@ map kitty_mod+down  neighboring_window down
 
 #: Tab management {{{
 
-map kitty_mod+t new_tab_with_cwd
+map kitty_mod+t    new_tab_with_cwd
+map ctrl+tab       next_tab
+map ctrl+shift+tab previous_tab
 
 # map kitty_mod+right next_tab
 # map kitty_mod+left  previous_tab
