--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -702,7 +702,13 @@ kitty_mod ctrl+shift
 
 #: Scrolling {{{
 
-map kitty_mod+a show_scrollback
+map kitty_mod+a         show_scrollback
+map kitty_mod+k         scroll_line_up
+map kitty_mod+j         scroll_line_down
+map kitty_mod+page_up   scroll_page_up
+map kitty_mod+page_down scroll_page_down
+map kitty_mod+home      scroll_home
+map kitty_mod+end       scroll_end
 
 # map kitty_mod+up        scroll_line_up
 # map kitty_mod+k         scroll_line_up
