Remap kitty scroll hotkeys to ctrl+shift+alt+up/down

--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -703,8 +703,8 @@ kitty_mod ctrl+shift
 #: Scrolling {{{
 
 map kitty_mod+a         show_scrollback
-map kitty_mod+k         scroll_line_up
-map kitty_mod+j         scroll_line_down
+map kitty_mod+alt+up    scroll_line_up
+map kitty_mod+alt+down  scroll_line_down
 map kitty_mod+page_up   scroll_page_up
 map kitty_mod+page_down scroll_page_down
 map kitty_mod+home      scroll_home
