Add kitty hotkey to view scrollback in vim

--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -90,6 +90,7 @@ font_size 16.0
 #: Scrollback {{{
 
 scrollback_lines 1000000
+#scrollback_pager vim -c 'setlocal buftype=nofile bufhidden=hide noswapfile' -c 'set nowrap' --cmd 'au StdinReadPost * %s/\%x1b\[[0-9;:]*m//g' -
 
 # scrollback_lines 2000
 
@@ -702,6 +703,7 @@ kitty_mod ctrl+shift
 
 #: Scrolling {{{
 
+map kitty_mod+h         pipe @text overlay vim -c 'setlocal buftype=nofile bufhidden=hide noswapfile' -c 'set nowrap'
 map kitty_mod+a         show_scrollback
 map kitty_mod+alt+up    scroll_line_up
 map kitty_mod+alt+down  scroll_line_down
