Remap vim tab reordering hotkeys to ctrl+{comma,period}

--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -892,6 +892,9 @@ map kitty_mod+0         change_font_size current 0
 
 #: Miscellaneous {{{
 
+map ctrl+, send_text all \x1b[23;2~
+map ctrl+. send_text all \x1b[24;2~
+
 # map kitty_mod+f11    toggle_fullscreen
 # map kitty_mod+u      kitten unicode_input
 # map kitty_mod+f2     edit_config_file
