Add kitty hotkey for toggle monocle

--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -255,6 +255,8 @@ initial_window_height 24c
 window_resize_step_cells 1
 window_resize_step_lines 1
 
+enabled_layouts tall, fat, stack
+
 # remember_window_size  yes
 # initial_window_width  640
 # initial_window_height 400
@@ -703,8 +705,8 @@ kitty_mod ctrl+shift
 
 #: Scrolling {{{
 
-map kitty_mod+h         pipe @text overlay vim -c 'setlocal buftype=nofile bufhidden=hide noswapfile' -c 'set nowrap'
-map kitty_mod+a         show_scrollback
+map kitty_mod+g         pipe @text overlay vim -c 'setlocal buftype=nofile bufhidden=hide noswapfile' -c 'set nowrap'
+map kitty_mod+h         show_scrollback
 map kitty_mod+alt+up    scroll_line_up
 map kitty_mod+alt+down  scroll_line_down
 map kitty_mod+page_up   scroll_page_up
@@ -813,6 +815,10 @@ map kitty_mod+alt+left  previous_tab
 #: }}}
 
 #: Layout management {{{
+
+map kitty_mod+a kitten monocle.py
+map kitty_mod+l>s goto_layout fat
+map kitty_mod+l>v goto_layout tall
 
 # map kitty_mod+l next_layout
 
