Set kitty border colors

--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -256,6 +256,8 @@ window_resize_step_cells 1
 window_resize_step_lines 1
 
 enabled_layouts tall, fat, stack
+active_border_color #906ef5
+inactive_border_color #9e8e7e
 
 # remember_window_size  yes
 # initial_window_width  640
