Add kitty layouts: vertical and grid

--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -255,7 +255,7 @@ initial_window_height 24c
 window_resize_step_cells 1
 window_resize_step_lines 1
 
-enabled_layouts tall, fat, stack
+enabled_layouts grid, tall, fat, stack, vertical
 active_border_color #906ef5
 inactive_border_color #9e8e7e
 
@@ -821,6 +821,8 @@ map kitty_mod+alt+left  previous_tab
 map kitty_mod+a kitten monocle.py
 map kitty_mod+l>s goto_layout fat
 map kitty_mod+l>v goto_layout tall
+map kitty_mod+l>t goto_layout vertical
+map kitty_mod+l>g goto_layout grid
 
 # map kitty_mod+l next_layout
 
