Add kitty hotkeys for reordering tabs

--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -792,6 +792,10 @@ map ctrl+tab            next_tab
 map ctrl+shift+tab      previous_tab
 map kitty_mod+alt+right next_tab
 map kitty_mod+alt+left  previous_tab
+map kitty_mod+.         move_tab_forward
+map kitty_mod+,         move_tab_backward
+map kitty_mod+alt+.     move_tab_forward
+map kitty_mod+alt+,     move_tab_backward
 
 # map kitty_mod+right next_tab
 # map kitty_mod+left  previous_tab
