Add notes about rmtrash alias

--- a/sh/.shrc
+++ b/sh/.shrc
@@ -13,7 +13,7 @@ alias gogh='bash -c "$(wget -qO- https://git.io/vQgMr)"'
 alias screenkey='screenkey --no-systray --no-detach'
 alias xcopy='xclip -selection clipboard -in'
 alias xpaste='xclip -selection clipboard -out'
-alias rm='rmtrash'
+alias rm='rmtrash' # \rm can be used to bypass the alias
 alias rmdir='rmdirtrash'
 
 if [[ "$TERM" == "xterm-kitty" ]]; then
