--- a/bspwm/.sxhkdrc
+++ b/bspwm/.sxhkdrc
@@ -7,22 +7,8 @@ hyper + f
   bspc node -t '~fullscreen'
 
 # Toggle monocle
-# Disables pseudo_tiled state if enabled, then launches a subshell that waits
-# for the desktop to come out of monocle mode to restore the original state
 hyper + a
-  id="$(bspc query -N -n)"; \
-  odesktop="$(printf '0x%08X' "$(bspc query -d -D -n "$id")")"; \
-  ostate="$(bspc query -n "$id" -T | jq -r '.client.state')"; \
-  if [[ "$ostate" == "pseudo_tiled" || "$ostate" == "floating" ]]; then \
-    bspc node "$id" -t tiled; \
-    (r=1; bspc subscribe desktop_layout | \
-      while [[ "$r" -eq 1 ]] && read -r ev mon desktop state; do \
-        if [[ "$state" != "monocle" && "$desktop" == "$odesktop" ]]; then \
-          bspc node "$id" -t "$ostate"; \
-          r=0; \
-        fi; \
-      done &); \
-  fi; bspc desktop -l next
+  bspc desktop -l next
 
 # Navigate windows with arrows
 {hyper,super} + {_,shift +} {Left,Down,Up,Right}
