--- a/term/.config/kitty/kitty.conf
+++ b/term/.config/kitty/kitty.conf
@@ -89,7 +89,7 @@ font_size 14.0
 
 #: Scrollback {{{
 
-scrollback_lines 1000000
+scrollback_lines 100000
 #scrollback_pager vim -c 'setlocal buftype=nofile bufhidden=hide noswapfile' -c 'set nowrap' --cmd 'au StdinReadPost * %s/\%x1b\[[0-9;:]*m//g' -
 
 # scrollback_lines 2000
