--- a/vim/.config/nvim/coc-settings.json
+++ b/vim/.config/nvim/coc-settings.json
@@ -17,7 +17,9 @@
       ["expanded?", "collapse", "expand"],
       ["open", "quit"]
     ],
-    "o": ["wait", "expandable?", "cd", "open"]
+    "o": ["wait", "expandable?", "cd", "open"],
+    "F": "search",
+    "f": "search:recursive"
   },
   "explorer.file.hiddenRules": {
     "extensions": ["o", "a", "obj", "pyc"],
@@ -27,14 +29,15 @@
   "explorer.file.reveal.filter": {
     "literals": ["node_modules"]
   },
+  "list.source.files.command": "rg",
   "list.source.files.args": ["--hidden", "--files"],
+  "list.source.mru.ignoreGitIgnore": true,
   "list.normalMappings": {
     "<C-c>": "do:exit"
   },
   "list.insertMappings": {
     "<C-c>": "do:exit"
   },
-  "list.source.mru.ignoreGitIgnore": true,
   "diagnostic.warningSign": "",
   "diagnostic.infoSign": "",
   "diagnostic.errorSign": "",
@@ -48,10 +51,42 @@
     "highlight": "CocFloating",
     "focusable": true
   },
+  "coc.preferences.formatOnType": true,
   "coc.preferences.formatOnSaveFiletypes": [
     "javascript",
     "typescript",
     "css",
     "markdown"
-  ]
+  ],
+  "suggest.autoTrigger": "none",
+  "suggest.enablePreselect": false,
+  "suggest.noselect": true,
+  "suggest.completionItemKindLabels": {
+    "keyword": "\uf1de",
+    "variable": "\ue79b",
+    "value": "\uf89f",
+    "operator": "\u03a8",
+    "constructor": "\uf0ad",
+    "function": "\u0192",
+    "reference": "\ufa46",
+    "constant": "\uf8fe",
+    "method": "\uf09a",
+    "struct": "\ufb44",
+    "class": "\uf0e8",
+    "interface": "\uf417",
+    "text": "\ue612",
+    "enum": "\uf435",
+    "enumMember": "\uf02b",
+    "module": "\uf40d",
+    "color": "\ue22b",
+    "property": "\ue624",
+    "field": "\uf9be",
+    "unit": "\uf475",
+    "event": "\ufacd",
+    "file": "\uf723",
+    "folder": "\uf114",
+    "snippet": "\ue60b",
+    "typeParameter": "\uf728",
+    "default": "\uf29c"
+  }
 }
