--- a/vim/.config/nvim/coc-settings.json
+++ b/vim/.config/nvim/coc-settings.json
@@ -96,6 +96,14 @@
 
   // coc-explorer {{{
   "explorer.icon.enableNerdfont": true,
+  "explorer.root.strategies": [
+    "keep",
+    "workspace",
+    "cwd",
+    "sourceBuffer",
+    "reveal"
+  ],
+  "explorer.file.cdCommand": "tcd",
   "explorer.keyMappings.global": {
     "u": ["wait", "gotoParent"],
     "r": "rename",
@@ -113,7 +121,7 @@
   },
   "explorer.file.hiddenRules": {
     "extensions": ["o", "a", "obj", "pyc"],
-    "filenames": ["node_modules", "lib"],
+    "filenames": ["node_modules"],
     "patternMatches": ["^\\."]
   },
   "explorer.file.reveal.filter": {
