--- a/vim/.config/nvim/coc-settings.json
+++ b/vim/.config/nvim/coc-settings.json
@@ -142,7 +142,7 @@
   // }}}
 
   // coc-tsserver {{{
-  "tsserver.disableAutomaticTypeAcquisition": true,
+  "tsserver.disableAutomaticTypeAcquisition": false,
   "typescript.implementationsCodeLens.enable": false,
   "javascript.suggestionActions.enabled": false,
   // XXX: Unfortunately this disables snippets for all coc extensions
