--- a/vim/.config/nvim/coc-settings.json
+++ b/vim/.config/nvim/coc-settings.json
@@ -96,6 +96,7 @@
 
   // coc-explorer {{{
   "explorer.icon.enableNerdfont": true,
+  "explorer.icon.source": "nvim-web-devicons",
   "explorer.root.strategies": [
     "keep",
     "workspace",
