--- a/vim/.config/nvim/coc-settings.json
+++ b/vim/.config/nvim/coc-settings.json
@@ -147,6 +147,11 @@
   "typescript.implementationsCodeLens.enable": false,
   "javascript.suggestionActions.enabled": false,
   // XXX: Unfortunately this disables snippets for all coc extensions
-  "snippets.loadFromExtensions": false
+  "snippets.loadFromExtensions": false,
+  // }}}
+
+  // LSP {{{
+  // TODO: https://github.com/neoclide/coc.nvim/pull/3355
+  "coc.preferences.semanticTokensHighlights": false
   // }}}
 }
