--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,7 +15,7 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-set-option -g status-right " \"#{=21:pane_title}\" %H:%M %d-%b-%y"
+set-option -g status-right " ###{pane_pid} %H:%M %d-%b-%y"
 
 set -g xterm-keys on
 
