tmux: fix cursor shape not changing

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,8 +25,12 @@ set -g default-terminal "screen-256color"
 
 # https://superuser.com/a/1165558/1129836
 # set -g terminal-overrides ",screen-256color*:Tc,screen*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
-set -gas terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -gas terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+set -gas terminal-overrides ',*:Smulx=\E[4::%p1%dm' # undercurl support
+set -gas terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m' # underscore colours - needs tmux-3.0
+
+# fix cursor shape not changing in tmux
+# https://github.com/neovim/neovim/pull/3165#issuecomment-176451922
+set -gas terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
