--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,7 @@ set -g @plugin 'seebi/tmux-colors-solarized'
 set -g base-index 1
 setw -g pane-base-index 1
 set -g mouse on
-set -s escape-time 0
+set -sg escape-time 50
 set -g focus-events on
 set -g set-clipboard on
 set-option -g renumber-windows on
