ssh: add .lan suffix to local hostnames

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -2,10 +2,10 @@ AddKeysToAgent no
 Host *
   PermitLocalCommand yes
   LocalCommand ~/dotfiles/scripts/title.sh "%r@%n"
-Host debian1
+Host debian1.lan
   User peelz
   IdentityFile ${XDG_RUNTIME_DIR}/git_secrets/private/debian1/id_peelz
-Host rpi1
+Host rpi1.lan
   User peelz
   IdentityFile ${XDG_RUNTIME_DIR}/git_secrets/private/rpi1/id_peelz
 Host github.com
