tmux: fix inconsistent terminal colors

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,8 +20,8 @@ set-option -g status-right " ###{pane_pid} %H:%M %d-%b-%y"
 set -g xterm-keys on
 
 set -g default-terminal "screen-256color"
-# tell Tmux that outside terminal supports true color
-# set -ga terminal-overrides ",xterm-256color*:Tc"
+# tell tmux that outside terminal supports true color
+set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # https://superuser.com/a/1165558/1129836
 # set -g terminal-overrides ",screen-256color*:Tc,screen*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
@@ -32,5 +32,5 @@ set -gas terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{2
 # https://github.com/neovim/neovim/pull/3165#issuecomment-176451922
 set -gas terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
