tmux: resize windows by holding keys

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,6 +15,17 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# resize windows by holding keys
+set -g repeat-time 1000
+bind -r -T prefix M-C-Up resize-pane -U 5
+bind -r -T prefix M-C-Down resize-pane -D 5
+bind -r -T prefix M-C-Left resize-pane -L 5
+bind -r -T prefix M-C-Right resize-pane -R 5
+bind -r -T prefix C-Up resize-pane -U
+bind -r -T prefix C-Down resize-pane -D
+bind -r -T prefix C-Left resize-pane -L
+bind -r -T prefix C-Right resize-pane -R
+
 set-option -g status-right " ###{pane_pid} %H:%M %d-%b-%y"
 
 set -g xterm-keys on
