--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,7 +1,7 @@
 AddKeysToAgent no
 Host *
   PermitLocalCommand yes
-  LocalCommand ~/dotfiles/scripts/title.sh "%r@%n"
+  LocalCommand ${DOTFILES_DIR}/scripts/title.sh "%r@%n"
 Host debian1.lan
   User peelz
   IdentityFile ${XDG_RUNTIME_DIR}/git_secrets/private/debian1/id_peelz
