install.sh: use 'dot-' prefix to avoid hidden files

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -1,3 +1,5 @@
+# vim:ft=tmux
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
